# agent-state-gate

./: BLUEPRINT.md  CHANGELOG.md  GUARDRAILS.md  HUB.codex.md  README.md  TECH_DEBT_REGISTER.md  deep-research-report (9).md  pyproject.toml
config/: gate_config.yaml
docs/: BIRDSEYE.md  CHECKLISTS.md  EVALUATION.md  PRODUCT_ACCEPTANCE_REFACTOR.md  RUNBOOK.md  adapter_contract.md  api_spec.md  architecture.md  requirements.md
docs/birdseye/: README.md  hot.json  index.json
docs/birdseye/caps/: BLUEPRINT.md.json  GUARDRAILS.md.json  HUB.codex.md.json  README.md.json  deep-research-report (9).md.json  docs.BIRDSEYE.md.json  docs.CHECKLISTS.md.json  docs.EVALUATION.md.json  docs.PRODUCT_ACCEPTANCE_REFACTOR.md.json  docs.RUNBOOK.md.json  docs.adapter_contract.md.json  docs.api_spec.md.json  (+3 more)
src/: __init__.py  cli.py  common.py  typed_ref.py
src/adapters/: __init__.py  base.py  gatefield_adapter.py  memx_adapter.py  protocols_adapter.py  registry.py  shipyard_adapter.py  taskstate_adapter.py  workflow_adapter.py
src/api/: __init__.py  mcp_surface.py
src/audit/: __init__.py  audit_packet.py  evidence_recorder.py
src/core/: __init__.py  assessment_engine.py  conflict_resolver.py  verdict_transformer.py
src/queue/: __init__.py  human_attention_queue.py
tests/: conftest.py
tests/unit/: __init__.py  test_adapters.py  test_adapters_base.py  test_assessment_engine.py  test_audit_packet.py  test_cli.py  test_conflict_resolver.py  test_evidence_recorder.py  test_human_attention_queue.py  test_mcp_surface.py  test_typed_ref.py  test_verdict_transformer.py
(+20 files in other folders)
